test/patterns/negative/guard1.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel
                    {| r = f x
  requires 0 = match x with
           | _ when false->true -> 1
|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : int -> int
(*@ r = f x
    requires ...
     *)
File "guard1.mli", line 4, characters 35-36:
Error: A formula was expected.
